--- a/.github/workflows/x86_64.yml
+++ b/.github/workflows/x86_64.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Update feeds
         run: |
-          git clone https://github.com/jerrykuku/luci-theme-argon
+          git clone -b 18.06 https://github.com/jerrykuku/luci-theme-argon.git
           rm -rf package/lean/luci-theme-argon && mv luci-theme-argon package/lean/
           ./scripts/feeds update -a
           ./scripts/feeds install -a
